[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "icx-tool"
version = "0.1.0"
authors = [
    { name = "ICX Force", email = "icx.force@gmail.com" },
]
description = "Tools for ICON"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    'License :: OSI Approved :: Apache Software License',
    "Operating System :: OS Independent",
]

[project.scripts]
icx-tool= "icx_tool:main.cli"

[project.urls]
"Homepage" = "https://github.com/icx-force/icx-tool"
"Bug Tracker" = "https://github.com/icx-force/icx-tool/issues"
